второй блок старт

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>FoodRecipes</title>
   </head>
   <body>
+    <!--header start-->
     <header class="header">
       <div class="container">
         <div class="header__inner flex">
@@ -36,6 +37,9 @@
       </div>
       <div class="line"></div>
     </header>
+    <!--header end-->
+
+    <!--hot-offer start-->
     <section class="hot-offer">
       <div class="aside">
         <aside class="aside-left"></aside>
@@ -87,6 +91,15 @@
         </div>
       </div>
     </section>
+    <!--hot-offer end-->
+
+    <!--hot-offer start-->
+    <section class="category container">
+      <div class="all__category flex">
+        <h2>Categories</h2>
+        <button>View All Categories</button>
+      </div>
+      <div class="change__category"></div>
+    </section>
   </body>
 </html>
- rrrrrrrr
