Добавил пример секции с выбором категории

--- a/index.html
+++ b/index.html
@@ -94,12 +94,21 @@
     <!--hot-offer end-->
 
     <!--hot-offer start-->
-    <section class="category container">
-      <div class="all__category flex">
-        <h2>Categories</h2>
-        <button>View All Categories</button>
+    <section class="category">
+      <div class="container">
+        <div class="category__inner">
+          <div class="category-title">
+            <h2>Categories</h2>
+            <button class="btn btn-category">View All Categories</button>
+          </div>
+          <div class="cards-category">
+            <div class="card">
+              картинка
+              название
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="change__category"></div>
     </section>
   </body>
 </html>
