--- a/index.html
+++ b/index.html
@@ -97,14 +97,16 @@
     <section class="category">
       <div class="container">
         <div class="category__inner">
-          <div class="category-title">
+          <div class="category-title flex">
             <h2>Categories</h2>
             <button class="btn btn-category">View All Categories</button>
           </div>
           <div class="cards-category">
             <div class="card">
-              картинка
-              название
+              <a href="#">
+                <img src="/img/category/breakfast.png" alt="" />
+                <p>Breakfast</p>
+              </a>
             </div>
           </div>
         </div>
