--- a/index.html
+++ b/index.html
@@ -101,11 +101,79 @@
             <h2>Categories</h2>
             <button class="btn btn-category">View All Categories</button>
           </div>
-          <div class="cards-category">
+          <div class="cards-category flex">
             <div class="card">
               <a href="#">
-                <img src="/img/category/breakfast.png" alt="" />
+                <img
+                  class="food-bottom"
+                  src="/img/category/breakfast_shadow.png"
+                  alt=""
+                />
+                <img
+                  class="food-top"
+                  src="/img/category/breakfast.webp"
+                  alt=""
+                />
                 <p>Breakfast</p>
+              </a>
+            </div>
+            <div class="card">
+              <a href="#">
+                <img
+                  class="food-bottom"
+                  src="/img/category/vegan_shadow.webp"
+                  alt=""
+                />
+                <img class="food-top" src="/img/category/vegan.webp" alt="" />
+                <p>Vegan</p>
+              </a>
+            </div>
+            <div class="card">
+              <a href="#">
+                <img
+                  class="food-bottom"
+                  src="/img/category/meat_shadowpng.webp"
+                  alt=""
+                />
+                <img class="food-top" src="/img/category/meat.webp" alt="" />
+                <p>Meat</p>
+              </a>
+            </div>
+            <div class="card">
+              <a href="#">
+                <img
+                  class="food-bottom"
+                  src="/img/category/dessert_shadow.webp"
+                  alt=""
+                />
+                <img class="food-top" src="/img/category/dessert.webp" alt="" />
+                <p>Dessert</p>
+              </a>
+            </div>
+            <div class="card">
+              <a href="#">
+                <img
+                  class="food-bottom"
+                  src="/img/category/lunch_shadow.webp"
+                  alt=""
+                />
+                <img class="food-top" src="/img/category/lunch.webp" alt="" />
+                <p>Lunch</p>
+              </a>
+            </div>
+            <div class="card">
+              <a href="#">
+                <img
+                  class="food-bottom"
+                  src="/img/category/chocolate_shadow.webp"
+                  alt=""
+                />
+                <img
+                  class="food-top"
+                  src="/img/category/chocolate.webp"
+                  alt=""
+                />
+                <p>Chocolate</p>
               </a>
             </div>
           </div>
