--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             <button class="btn btn-category">View All Categories</button>
           </div>
           <div class="cards-category flex">
-            <div class="card">
-              <a href="#">
+            <a href="#">
+              <div class="card">
                 <img
                   class="food-bottom"
                   src="/img/category/breakfast_shadow.png"
@@ -115,10 +115,10 @@
                   alt=""
                 />
                 <p>Breakfast</p>
-              </a>
-            </div>
-            <div class="card">
-              <a href="#">
+              </div>
+            </a>
+            <a href="#">
+              <div class="card vegan">
                 <img
                   class="food-bottom"
                   src="/img/category/vegan_shadow.webp"
@@ -126,10 +126,10 @@
                 />
                 <img class="food-top" src="/img/category/vegan.webp" alt="" />
                 <p>Vegan</p>
-              </a>
-            </div>
-            <div class="card">
-              <a href="#">
+              </div>
+            </a>
+            <a href="#">
+              <div class="card meat">
                 <img
                   class="food-bottom"
                   src="/img/category/meat_shadowpng.webp"
@@ -137,10 +137,10 @@
                 />
                 <img class="food-top" src="/img/category/meat.webp" alt="" />
                 <p>Meat</p>
-              </a>
-            </div>
-            <div class="card">
-              <a href="#">
+              </div>
+            </a>
+            <a href="#">
+              <div class="card dessert">
                 <img
                   class="food-bottom"
                   src="/img/category/dessert_shadow.webp"
@@ -148,10 +148,10 @@
                 />
                 <img class="food-top" src="/img/category/dessert.webp" alt="" />
                 <p>Dessert</p>
-              </a>
-            </div>
-            <div class="card">
-              <a href="#">
+              </div>
+            </a>
+            <a href="#">
+              <div class="card lunch">
                 <img
                   class="food-bottom"
                   src="/img/category/lunch_shadow.webp"
@@ -159,10 +159,10 @@
                 />
                 <img class="food-top" src="/img/category/lunch.webp" alt="" />
                 <p>Lunch</p>
-              </a>
-            </div>
-            <div class="card">
-              <a href="#">
+              </div>
+            </a>
+            <a href="#">
+              <div class="card chocolate">
                 <img
                   class="food-bottom"
                   src="/img/category/chocolate_shadow.webp"
@@ -174,8 +174,8 @@
                   alt=""
                 />
                 <p>Chocolate</p>
-              </a>
-            </div>
+              </div>
+            </a>
           </div>
         </div>
       </div>
