--- a/index.html
+++ b/index.html
@@ -101,19 +101,10 @@
             <h2>Categories</h2>
             <button class="btn btn-category">View All Categories</button>
           </div>
-          <div class="cards-category flex">
-            <a href="#">
-              <div class="card">
-                <img
-                  class="food-bottom"
-                  src="/img/category/breakfast_shadow.png"
-                  alt=""
-                />
-                <img
-                  class="food-top"
-                  src="/img/category/breakfast.webp"
-                  alt=""
-                />
+          <div class="cards-category">
+            <div class="card">
+              <a href="#">
+                <img src="/img/category/breakfast.png" alt="" />
                 <p>Breakfast</p>
               </div>
             </a>
