--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </section>
     <!--hot-offer end-->
 
-    <!--hot-offer start-->
+    <!--category start-->
     <section class="category">
       <div class="container">
         <div class="category__inner">
@@ -180,5 +180,24 @@
         </div>
       </div>
     </section>
+    <!--category end-->
+
+    <!--recipes start-->
+    <main class="main">
+      <div class="container">
+        <div class="recipes_inner">
+          <div class="recipes-title">
+            <h2>Simple and tasty recipes</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqut enim ad
+              minim
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!--recipes end-->
   </body>
 </html>
+<!-- добавил ветку anton -->
